--- a/3-javascript/02-introduction/exemplo01.html
+++ b/3-javascript/02-introduction/exemplo01.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 001</title>
+  <title>JavaScript Introduction</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
 <body>
   <h1>JS Introdução</h1>
