--- a/3-javascript/02-introduction/exemplo02.html
+++ b/3-javascript/02-introduction/exemplo02.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 002</title>
+  <title>JavaScript Introduction</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
+
 <body>
   <h1>JS Introdução</h1>
+
   <p>JavaScript consegue modificar o valor de um atributo.</p>
   <button onclick="mudarImagemOn()">Ligar</button>
   
@@ -23,6 +27,6 @@
       document.getElementById('imagem').src = '../../imagens/pic_bulboff.gif';
     }
   </script>
-
 </body>
+
 </html>
