--- a/3-javascript/02-introduction/exemplo03.html
+++ b/3-javascript/02-introduction/exemplo03.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 003</title>
+  <title>JavaScript Introduction</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
+
 <body>
   <h1>JS Introdução</h1>
+
   <p>JavaScript consegue modificar o estilo de um elemento HTML.</p>
   <button onclick="mudarEstilo()">Clique aqui!</button>
 
@@ -16,4 +20,5 @@
     }
   </script>
 </body>
+
 </html>
