--- a/3-javascript/02-introduction/exemplo04.html
+++ b/3-javascript/02-introduction/exemplo04.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 004</title>
+  <title>JavaScript Introduction</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
+  <style>
+    div {
+      margin: 16px 0;
+    }
+  </style>
 </head>
+
 <body>
   <h1>JS Introdução</h1>
-  <p>JavaScript consegue esconder elementos HTML ou revelar elementos HTML escondidos.</p>
+
+  <p>JavaScript consegue esconder ou revelar elementos HTML.</p>
   <button onclick="esconder()">Esconder</button>
   <button onclick="mostrar()">Mostrar</button>
   <div><img src="../../imagens/pic_bulboff.gif" alt="Imagem de uma lâmpada desligada"></div>
@@ -22,4 +31,5 @@
     }
   </script>
 </body>
+
 </html>
