--- a/3-javascript/16-object/exemplo01.html
+++ b/3-javascript/16-object/exemplo01.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 01</title>
+  <title>JavaScript Object</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
 
 <body>
   <h1>Object</h1> 
+
   <h2>Exemplo 1</h2>
   <p id="exe1"></p> 
   <hr>
+
   <h2>Exemplo 2</h2>
   <p id="exe2"></p>
   <p id="exe2-2"></p>
@@ -52,8 +55,6 @@
     document.getElementById('exe-3').textContent = 
     'A ' + livro.titulo + ' foi escrita por ' + livro.autor +
     '. E ele nasceu na ' + livro.dados();
-
-
   </script>
 </body>
 
