--- a/3-javascript/19-string-methods/exemplo01.html
+++ b/3-javascript/19-string-methods/exemplo01.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 01</title>
+  <title>JavaScript String Methods</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
 
 <body>
-  <h1>Strings Methods</h1>
-  <!-- <h2>Exemplo 1</h2>
-  <h3>Length</h3>
-  <p><mark>Rafael Santana</mark></p>
-  <p id="e1"></p>
-  <hr> -->
+  <h1>String Methods</h1>
 
-  <!-- <h3>slice()</h3>
-  <p><mark>Maça, Banana, Uva</mark></p>
-  <p id="e2"></p>
-  <hr> -->
+  <p>Os exemplos e exercícios foram feitos usando <code>console.log()</code></p>
+
+  <p>Tecle <kbd>F12</kbd> para abrir o <strong>devtools</strong> e visualizar as atividades desta página.</p>
 
   <script>
     let nome = 'Rafael Santana ';
@@ -80,10 +75,6 @@
     abc = 'a|b|c|d|e|';
     const myArray = abc.split('|');
     console.log(myArray)
-    
-
-
-    
   </script>
 </body>
 
