--- a/3-javascript/27-arrays-methods/exemplo01.html
+++ b/3-javascript/27-arrays-methods/exemplo01.html
@@ -4,11 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Array Methods</title>
+  <title>JavaScript Array Methods</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
 
 <body>
   <h1>Array Methods</h1>  
+
+  <p>Os exemplos e exercícios foram feitos usando <code>console.log()</code></p>
+
+  <p>Tecle <kbd>F12</kbd> para abrir o <strong>devtools</strong> e visualizar todas as atividades desta página.</p>
 
   <script>
     const frutas = ['Banana', 'Laranja', 'Uva', 'Pêra'];
@@ -49,8 +54,6 @@
     console.log(fruits);
     const fruits2 = fruits.slice(2);
     console.log(fruits2);
-
-    
   </script>
 </body>
 
