--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Sumário</h1>
+
   <div class="principal">
     <details open>
       <summary>HTML</summary>
@@ -235,32 +236,80 @@
       <summary>JavaScript</summary>
       <ol>
         <li>Home</li>
-        <li>Introduction</li>
+        <li>
+          Introduction
+          <ul>
+            <li><a href="3-javascript/02-introduction/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="3-javascript/02-introduction/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="3-javascript/02-introduction/exemplo03.html" target="_blank">Exemplo 03</a></li>
+            <li><a href="3-javascript/02-introduction/exemplo04.html" target="_blank">Exemplo 04</a></li>
+          </ul>
+        </li>
         <li>Where To</li>
         <li>Output</li>
         <li>Statements</li>
         <li>Syntax</li>
         <li>Comments</li>
-        <li>Variables</li>
+        <li>
+          Variables
+          <ul>
+            <li><a href="3-javascript/08-variables/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Let</li>
         <li>Const</li>
         <li>Operators</li>
         <li>Arithmetic</li>
         <li>Assignment</li>
         <li>Data Types</li>
-        <li>Functions</li>
-        <li>Objects</li>
+        <li>
+          Functions
+          <ul>
+            <li><a href="3-javascript/15-functions/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Objects
+          <ul>
+            <li><a href="3-javascript/16-object/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Events</li>
         <li>Strings</li>
-        <li>String Methods</li>
-        <li>String Search</li>
-        <li>String Templates</li>
+        <li>
+          String Methods
+          <ul>
+            <li><a href="3-javascript/19-string-methods/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          String Search
+          <ul>
+            <li><a href="3-javascript/20-string-search/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          String Templates
+          <ul>
+            <li><a href="3-javascript/21-string-templates/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Numbers</li>
         <li>BigInt</li>
         <li>Number Methods</li>
         <li>Number Properties</li>
-        <li>Arrays</li>
-        <li>Array Methods</li>
+        <li>
+          Arrays
+          <ul>
+            <li><a href="3-javascript/26-arrays/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Array Methods
+          <ul>
+            <li><a href="3-javascript/27-arrays-methods/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
       </ol>
     </details>
   </div>
