--- a/3-javascript/08-variables/exemplo01.html
+++ b/3-javascript/08-variables/exemplo01.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 005</title>
+  <title>JavaScript Variables</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
+
 <body>
   <h1>Variáveis</h1>
+
+  <p>Os exemplos e exercícios foram feitos usando <code>console.log()</code></p>
+
+  <p>Tecle <kbd>F12</kbd> para abrir o <strong>devtools</strong> e visualizar as atividades desta página.</p>
 
   <script>
     let x = 2;
     let y = 3;
     let z = x + y;
-
-    let a
+    console.log(z);
     
-    let carName = "Volvo"
+    let carName = "Volvo";
+    console.log(carName);
 
     let b = 5;
     let c = 10;
-    
-    document.write(b + c);
+    console.log(b + c);
   </script>
 </body>
+
 </html>
