--- a/3-javascript/21-string-templates/exemplo01.html
+++ b/3-javascript/21-string-templates/exemplo01.html
@@ -4,12 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JavaScript String Templates</title>
+  <link rel="stylesheet" href="../../estilos/3-js.css">
 </head>
 
 <body>
   <h1>String Templates</h1>
+
+  <p>Alguns exemplos e exercícios foram feitos usando <code>console.log()</code></p>
+
+  <p>Tecle <kbd>F12</kbd> para abrir o <strong>devtools</strong> e visualizar todas as atividades desta página.</p>
+  
   <div></div>
+  
   <script>
     console.log(`Olá, Mundo!`);
     console.log(`He's often called Johnny`);
