Adicionei novos exemplos de CSS e JS.

--- a/3-javascript/19-string-methods/exemplo01.html
+++ b/3-javascript/19-string-methods/exemplo01.html
@@ -56,6 +56,10 @@
     let exe6b = console.log(text.replaceAll('Cats', 'Dogs'));
 
 
+    let texti = "Please visit Microsoft and microsoft!";
+    let newText = texti.replace(/Microsoft/gi, "W3Schools");
+
+
     // upperCase & lowerCase
     console.log(nome.toUpperCase());
     console.log(nome.toLowerCase());
@@ -72,6 +76,7 @@
     console.log(nome.charAt(0));
 
     // split() = dividir
+    // transformar em array
     abc = 'a|b|c|d|e|';
     const myArray = abc.split('|');
     console.log(myArray)
