--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
         <li>File Paths</li>
         <li>Head</li>
         <li>Layout</li>
+        <li>Responsive</li>
       </ol>
     </details>
+
 
     <!-- CSS -->
     <details open>
@@ -229,8 +231,15 @@
             <li><a href="2-css/28-align/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
+        <li>
+          Combinators
+          <ul>
+            <li><a href="2-css/29-combinators/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
       </ol>
     </details>
+
 
     <details open>
       <summary>JavaScript</summary>
@@ -308,6 +317,13 @@
           Array Methods
           <ul>
             <li><a href="3-javascript/27-arrays-methods/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Array Sort
+          <ul>
+            <li><a href="3-javascript/28-array-sort/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="3-javascript/28-array-sort/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
         </li>
       </ol>
