--- a/notas.html
+++ b/notas.html
@@ -11,15 +11,14 @@
   <h1>Notas</h1> 
 
   <h2>HTML</h2>
+  
   <h3>Capítulo 15: Links</h3>
-  <p>By default, links will appear as follows in all browsers:</p>
-    
+  <p>By default, links will appear as follows in all browsers:</p> 
   <ul>
     <li>An unvisited link is underlined and blue</li>
     <li>A visited link is underlined and purple</li>
     <li>An active link is underlined and red</li>
-  </ul>
-    
+  </ul> 
   <p>You can change the link state colors, by using CSS:</p>
   <ul>
     <li>a:link</li>
@@ -28,14 +27,21 @@
     <li>a:active</li>
   </ul>
 
+  <h3>Capítulo 30: Combinators</h3>
+  <p>There are four different combinators in CSS:</p>
+  <ul>
+    <li>descendant selector (space)</li>
+    <li>child selector (>)</li>
+    <li>adjacent sibling selector (+)</li>
+    <li>general sibling selector (~)</li>
+  </ul>
+
   <hr>
 
   <h2>JavaScript</h2>
   <h3>Capítulo 23: BigInt</h3>
   <p>BigInt is the second numeric data type in JavaScript (after Number).</p>
-
   <p>With BigInt the total number of supported data types in JavaScript is 8:</p>
-
   <ol>
     <li>String</li>
     <li>Number</li>
