--- a/3-javascript/27-arrays-methods/exemplo01.html
+++ b/3-javascript/27-arrays-methods/exemplo01.html
@@ -27,16 +27,20 @@
     console.log(frutas.toString());
     console.log(frutas.join(' * '));
 
+    // pop = the last element
     console.log(frutas.pop());
     console.log(frutas);
 
+    // push = at the end
     frutas.push('Kiwi');
     console.log(frutas);
 
+    // shift = removes the first
     frutas.shift();
     console.log(frutas.shift());
     console.log(frutas);
 
+    // unshift = adds new element at the beginning
     frutas.unshift('Melão');
     console.log(frutas.unshift('Manga'));
     console.log(frutas);
@@ -44,16 +48,32 @@
     console.log(myChildren);
     console.log(novaArray);
 
+    // splice = emendar
     console.log(bikes);
     bikes.splice(2, 0, 'Caloi');
     console.log(bikes);
-    bikes.splice(1, 1);
+    bikes.splice(1, 1); // tirei um na posição 1
     console.log(bikes);
 
     const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
     console.log(fruits);
     const fruits2 = fruits.slice(2);
     console.log(fruits2);
+
+    const teste = ["a", "b", "c"];
+    console.log(teste.shift());
+    console.log(teste);
+    teste.unshift('z');
+    console.log(teste);
+
+    let teste2 = teste.toString();
+    console.log(teste2)
+    let teste3 = teste2.replace('b', ':');
+    console.log(teste3);
+    teste3 = teste3.split(',');
+    console.log(typeof teste3)
+    console.log(teste3);
+
   </script>
 </body>
 
