--- a/3-javascript/08-variables/exemplo01.html
+++ b/3-javascript/08-variables/exemplo01.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Variables</title>
-  <link rel="stylesheet" href="../../estilos/3-js.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
 </head>
 
 <body>
