--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <li>Head</li>
         <li>Layout</li>
         <li>Responsive</li>
+        <li>Computer Code</li>
+        <li>Semantics</li>
       </ol>
     </details>
 
@@ -237,6 +239,13 @@
             <li><a href="2-css/29-combinators/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
+        <li>
+          Pseudo-classes
+          <ul>
+            <li><a href="2-css/30-pseudo-classes/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/30-pseudo-classes/exemplo02.html" target="_blank">Exemplo 02</a></li>
+          </ul>
+        </li>
       </ol>
     </details>
 
@@ -326,6 +335,13 @@
             <li><a href="3-javascript/28-array-sort/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
         </li>
+        <li>
+          Array Iteration
+          <ul>
+            <li><a href="3-javascript/29-array-iteration/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>Array Const</li>
       </ol>
     </details>
   </div>
