--- a/3-javascript/02-introduction/exemplo04.html
+++ b/3-javascript/02-introduction/exemplo04.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Introduction</title>
-  <link rel="stylesheet" href="../../estilos/3-js.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     div {
       margin: 16px 0;
