Atualizações nos exemplos de HTML.

--- a/1-html/11-quotations/exemplo01.html
+++ b/1-html/11-quotations/exemplo01.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Block & Inline</title>
+  <title>HTML Quotations - Exemplo 01</title>
   <link rel="stylesheet" href="../../estilos/principal.css">
 </head>
 
 <body>
-  <h1>Block & Inline</h1>
-  <div class="div-block-inline">
-    Elemento com display block
-  </div>
+  <h1>HTML Quotations - Exemplo 01</h1> 
 
-  <span class="span-block-inline">
-    Elemento com display inline
-  </span>
+  <p>blockquote</p>
+  <p>q</p>
+  <p>abbr</p>
+  <p>address</p>
+  <p>cite</p>
+  <p>bdo</p>
 </body>
 
 </html>
