--- a/1-html/19-tables/exemplo01.html
+++ b/1-html/19-tables/exemplo01.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Tables</title>
-  <link rel="stylesheet" href="../../estilos/1-html.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
 </head>
 
 <body>
