Atualizações nos exemplos de CSS.

--- a/2-css/08-background/exemplo01.html
+++ b/2-css/08-background/exemplo01.html
@@ -5,7 +5,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Backgrounds</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
+  <style>
+    .exe1-a {
+      background-color: green;
+      border: 1px solid black;
+      display: inline-block;
+      height: 200px;
+      margin: 8px;
+      opacity: 0.3;
+      width: 200px;
+    }
+
+    .exe1-b {
+      background-color: rgba(0, 128, 0, 0.3);
+      border: 1px solid black;
+      display: inline-block;
+      height: 200px;
+      margin: 8px;
+      width: 200px;
+    }
+  </style>
 </head>
 
 <body>
