--- a/2-css/08-background/exemplo02.html
+++ b/2-css/08-background/exemplo02.html
@@ -5,7 +5,66 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Backgrounds</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
+  <style>
+    .exe2-a {
+      background-image: url('../../imagens/smiley.gif');
+      border: 1px solid black;
+      height: 200px;
+      margin: 8px 0;
+    }
+
+    .exe2-b {
+      background-image: url('../../imagens/smiley.gif');
+      background-repeat: repeat-x;
+      border: 1px solid black;
+      height: 200px;
+      margin: 8px 0;
+    }
+
+    .exe2-c {
+      background-image: url('../../imagens/smiley.gif');
+      background-repeat: no-repeat;
+      border: 1px solid black;
+      height: 200px;
+      margin: 8px 0;
+    }
+
+    .exe2-d {
+      background-image: url('../../imagens/smiley.gif');
+      background-position: center top;
+      background-repeat: no-repeat;
+      border: 1px solid black;
+      height: 200px;
+      margin: 8px 0;
+    }
+
+    .exe2-e {
+      background-image: url('../../imagens/smiley.gif');
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      border: 1px solid black;
+      height: 200px;
+      margin: 8px 0;
+    }
+
+    .exe2-f {
+      background: powderblue url('../../imagens/smiley.gif') no-repeat center right/cover;
+      height: 200px;
+      margin: 8px 0;
+    }
+
+    .exe2-g {
+      background-image: url('../../imagens/smiley.gif');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      border: 1px solid black;
+      height: 200px;
+      margin: 8px 0;
+    }
+  </style>
 </head>
 
 <body>
