--- a/index.html
+++ b/index.html
@@ -20,12 +20,37 @@
         <li>Editors</li>
         <li>Basic</li>
         <li>Elements</li>
-        <li>Attributes</li>
-        <li>Headings</li>
-        <li>Paragraphs</li>
+        <li>
+          Attributes
+          <ul>
+            <li><a href="1-html/06-attributes/exemplo01.html" target="_blank" title="nota sobre atributos">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Headings
+          <ul>
+            <li><a href="1-html/07-headings/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Paragraphs
+          <ul>
+            <li><a href="1-html/08-paragraphs/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Styles</li>
-        <li>Formatting</li>
-        <li>Quotations</li>
+        <li>
+          Formatting
+          <ul>
+            <li><a href="1-html/10-formatting/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Quotations
+          <ul>
+            <li><a href="1-html/11-quotations/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Comments</li>
         <li>
           Colors
@@ -87,8 +112,6 @@
       </ol>
     </details>
 
-
-    <!-- CSS -->
     <details open>
       <summary>CSS</summary>
       <ol>
@@ -113,7 +136,7 @@
             <li>Image</li>
             <li>Repeat</li>
             <li>Attachment</li>
-            <li>Shorthand</li>
+            <li><mark>Shorthand</mark></li>
             <li><a href="2-css/08-background/exemplo01.html" target="_blank">Exemplo 1</a> <a href="2-css/08-background/exemplo02.html" target="_blank">Exemplo 2</a></li>
           </ul>
         </li>
@@ -240,17 +263,23 @@
           </ul>
         </li>
         <li>
-          Pseudo-classes
+          Pseudo-class
           <ul>
-            <li><a href="2-css/30-pseudo-classes/exemplo01.html" target="_blank">Exemplo 01</a></li>
-            <li><a href="2-css/30-pseudo-classes/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="2-css/30-pseudo-class/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/30-pseudo-class/exemplo02.html" target="_blank">Exemplo 02</a></li>
+          </ul>
+        </li>
+        <li>
+          Pseudo-element
+          <ul>
+            <li><a href="2-css/31-pseudo-element/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
       </ol>
     </details>
 
 
-    <details open>
+    <details>
       <summary>JavaScript</summary>
       <ol>
         <li>Home</li>
@@ -298,6 +327,7 @@
           String Methods
           <ul>
             <li><a href="3-javascript/19-string-methods/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="3-javascript/19-string-methods/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
         </li>
         <li>
