Adicionei exemplos e exercícios de HTML.

--- a/1-html/10-formatting/exemplo01.html
+++ b/1-html/10-formatting/exemplo01.html
@@ -11,13 +11,15 @@
 <body>
   <h1>HTML Formatting - Exemplo 01</h1> 
 
-  <p><em>emphasized</em> text</p>
-  <p><small>small</small> text</p>
-  <p><strong>important</strong> text</p>
-  <p><sub>subscripted</sub> & <sup>superscripted</sup> text</p>
-  <p><ins>inserted</ins> text</p>
-  <p><del>deleted</del> text</p>
-  <p><mark>marked/highlighted</mark> text</p>
+  <section class="notas">
+    <p><em>emphasized</em> text</p>
+    <p><small>small</small> text</p>
+    <p><strong>important</strong> text</p>
+    <p><sub>subscripted</sub> & <sup>superscripted</sup> text</p>
+    <p><ins>inserted</ins> text</p>
+    <p><del>deleted</del> text</p>
+    <p><mark>marked/highlighted</mark> text</p>
+  </section>
 </body>
 
 </html>
