--- a/1-html/16-images/exemplo01.html
+++ b/1-html/16-images/exemplo01.html
@@ -12,8 +12,8 @@
   <h1>Image Map</h1>
   <picture>
     <source media="(min-width: 800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
-    <source media="(min-width: 600px)" srcset="https://www.w3schools.com/html/img_girl.jpg">
-    <img src="https://www.w3schools.com/css/img_tree.png" alt="Imagem de uma árvore com uma coruja num galho">
+    <source media="(min-width: 600px)" srcset="../../imagens/img_girl.jpg">
+    <img src="../../imagens/img_tree.png" alt="Imagem de uma árvore com uma coruja num galho">
   </picture>
 </body>
 
