--- a/1-html/19-tables/exemplo01.html
+++ b/1-html/19-tables/exemplo01.html
@@ -6,6 +6,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Tables</title>
   <link rel="stylesheet" href="../../estilos/principal.css">
+  <style>
+    table, th, td {
+      border: 1px solid gray;
+      margin-bottom: 30px;
+    }
+
+    .table2, 
+    .table3, 
+    .table4, 
+    .table5, 
+    .table6, 
+    .table7, 
+    .table8, 
+    .table9 {
+      border-collapse: collapse;
+    }
+
+    .table3 td {
+      background-color: powderblue;
+      border: 1px solid white;
+    }
+
+    .table4 td {
+      border-color: powderblue;
+    }
+
+    .table5 td:nth-child(odd), 
+    .table5 th:nth-child(odd) {
+      background-color: powderblue;
+    }
+
+    .table6 th {
+      width: 33.33%;
+    }
+
+    .table6 td {
+      width: 33.33%;
+    }
+
+    .table7 tr:nth-child(even) {
+      background-color: powderblue;
+    }
+
+    .table8 tr:hover {
+      background-color: powderblue;
+    }
+  </style>
 </head>
 
 <body>
