--- a/1-html/21-block-inline/exemplo01.html
+++ b/1-html/21-block-inline/exemplo01.html
@@ -6,6 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Block & Inline</title>
   <link rel="stylesheet" href="../../estilos/principal.css">
+  <style>
+    .div-block-inline {
+      background-color: powderblue;
+      margin: 16px 0;
+    }
+
+    .span-block-inline {
+      background-color: bisque;
+    }
+  </style>
 </head>
 
 <body>
