--- a/1-html/11-quotations/exemplo01.html
+++ b/1-html/11-quotations/exemplo01.html
@@ -11,12 +11,20 @@
 <body>
   <h1>HTML Quotations - Exemplo 01</h1> 
 
-  <p>blockquote</p>
-  <p>q</p>
-  <p>abbr</p>
-  <p>address</p>
-  <p>cite</p>
-  <p>bdo</p>
+  <section class="notas">
+    <h2>blockquote</h2>
+    <p>Defines a section that is quoted from another source</p>
+    <h2>q</h2>
+    <p>Defines a short inline quotation</p>
+    <h2>abbr</h2>
+    <p>Defines an abbreviation or acronym</p>
+    <h2>address</h2>
+    <p>Defines contact information for the author/owner of a document</p>
+    <h2>cite</h2>
+    <p>Defines the title of a work</p>
+    <h2>bdo</h2>
+    <p>Defines the text direction</p>
+  </section>
 </body>
 
 </html>
