Adicionei imagens e atualizei o index e o CSS.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           Headings
           <ul>
             <li><a href="1-html/07-headings/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="1-html/07-headings/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
@@ -43,12 +44,14 @@
           Formatting
           <ul>
             <li><a href="1-html/10-formatting/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="1-html/10-formatting/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
           Quotations
           <ul>
             <li><a href="1-html/11-quotations/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="1-html/11-quotations/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>Comments</li>
@@ -66,6 +69,7 @@
           <ul>
             <li>Colors</li>
             <li>Bookmarks</li>
+            <li><a href="1-html/15-links/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
@@ -75,6 +79,7 @@
             <li>Background Images</li>
             <li>The Picture Element</li>
             <li><a href="1-html/16-images/exemplo01.html" target="_blank">Exemplo 01</a> | <a href="1-html/16-images/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="1-html/16-images/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>Favicon</li>
@@ -90,24 +95,41 @@
             <li>Styling</li>
             <li>Colgroup</li>
             <li><a href="1-html/19-tables/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="1-html/19-tables/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
-        <li>Lists</li>
+        <li>
+          Lists
+          <ul>
+            <li><a href="1-html/20-lists/exercicios.html" target="_blank
+              ">Exercícios</a></li>
+          </ul>
+        </li>
         <li>
           Block & Inline
           <ul>
-            <li><a href="1-html/20-block-inline/exemplo01.html" target="_blank">Exemplo 1</a></li>
+            <li><a href="1-html/21-block-inline/exemplo01.html" target="_blank">Exemplo 1</a></li>
           </ul>
         </li>
         <li>Classes</li>
         <li>Id</li>
-        <li>Iframes</li>
+        <li>
+          Iframes
+          <ul>
+            <li><a href="1-html/24-iframes/exercicios.html" target="_blank">Exercícios</a></li>
+          </ul>
+        </li>
         <li>JavaScript</li>
         <li>File Paths</li>
         <li>Head</li>
         <li>Layout</li>
         <li>Responsive</li>
-        <li>Computer Code</li>
+        <li>
+          Computer Code
+          <ul>
+            <li><a href="1-html/30-computercode/exercicios.html" target="_blank">Exercícios</a></li>
+          </ul>
+        </li>
         <li>Semantics</li>
       </ol>
     </details>
@@ -137,7 +159,11 @@
             <li>Repeat</li>
             <li>Attachment</li>
             <li><mark>Shorthand</mark></li>
-            <li><a href="2-css/08-background/exemplo01.html" target="_blank">Exemplo 1</a> <a href="2-css/08-background/exemplo02.html" target="_blank">Exemplo 2</a></li>
+            <li>
+              <a href="2-css/08-background/exemplo01.html" target="_blank">Exemplo 1</a> 
+              <a href="2-css/08-background/exemplo02.html" target="_blank">Exemplo 2</a>
+            </li>
+            <li><a href="2-css/08-background/exercicio01.html" target="_blank">Exercício 01</a></li>
           </ul>
         </li>
         <li>
