Adicionei exercícios de CSS.

--- a/2-css/09-border/exemplo01.html
+++ b/2-css/09-border/exemplo01.html
@@ -5,7 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Border</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
+  <style>
+    .p1 {
+      border-color: coral;
+      border-style: solid;
+      border-width: 5px 20px;
+    }
+
+    .p2 {
+      border-color: powderblue;
+      border-style: solid;
+      border-width: 20px 5px 5px 30px;
+    }
+
+    .p3 {
+      border-style: solid;
+      border-color: coral green blue brown;
+    }
+  </style>
 </head>
 
 <body>
