--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
             <li>Image</li>
             <li>Repeat</li>
             <li>Attachment</li>
-            <li><mark>Shorthand</mark></li>
+            <li>Shorthand</li>
             <li>
               <a href="2-css/08-background/exemplo01.html" target="_blank">Exemplo 1</a> 
               <a href="2-css/08-background/exemplo02.html" target="_blank">Exemplo 2</a>
             </li>
-            <li><a href="2-css/08-background/exercicio01.html" target="_blank">Exercício 01</a></li>
+            <li><a href="2-css/08-background/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
@@ -175,16 +175,28 @@
             <li>Shorthand</li>
             <li>Borders</li>
             <li><a href="2-css/09-border/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/09-border/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>  
         <li>
           Margins
           <ul>
             <li>Margin Collapse</li>
+            <li><a href="2-css/10-margin/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
-        <li>Padding</li>
-        <li>Height/Width</li>
+        <li>
+          Padding
+          <ul>
+            <li><a href="2-css/11-padding/exercicios.html" target="_blank">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>
+          Height/Width
+          <ul>
+            <li><a href="2-css/12-height-width/exercicios.html" target="_blank">Exercícios</a></li>
+          </ul>
+        </li>
         <li>Box Model</li>
         <li>
           Outline
