--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
             <li>Color</li>
             <li>Shorthand</li>
             <li>Offset</li>
+            <li><a href="2-css/14-outline/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
         <li>
@@ -237,6 +238,7 @@
           Links
           <ul>
             <li><a href="2-css/18-links/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/18-links/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
@@ -317,7 +319,7 @@
     </details>
 
 
-    <details>
+    <details open>
       <summary>JavaScript</summary>
       <ol>
         <li>Home</li>
